--- a/wiki/CurrentStatus.wiki
+++ b/wiki/CurrentStatus.wiki
@@ -3,10 +3,11 @@
 
 = current status =
 
-2008-06-08 all the parts are in; everything except the labrador3 is soldered down; the microcontroller boots and runs the oscilloscope program and displays a fake trace on the screen.
+2009-02-04 software runs reliably at 60MHz using flash wait states
 
 = history =
 
+  * 2008-06-08 all the parts are in; everything except the labrador3 is soldered down; the microcontroller boots and runs the oscilloscope program and displays a fake trace on the screen.
   * 2008-05-16 most of the parts came in and have been soldered to the circuit board - still missing the 3.3V buck-boost regulator and the microcontroller’s oscillator.
   * 2008-05 the board has been fabricated
   * 2008-04 the board design is finished
