--- a/wiki/Labrador3.wiki
+++ b/wiki/Labrador3.wiki
@@ -5,6 +5,8 @@
 
 The AtoD converter is called a “labrador3″ or just “lab3,” and it is an ASIC that was designed for use in ANITA, an antarctic neutrino detector experiment.
 
+The labrador3 was developed at the [http://manoa.hawaii.edu/ University of Hawaii] / [http://www.phys.hawaii.edu/ department of physics] / [http://www.phys.hawaii.edu/~idlab/ instrumentation development lab].
+
 = details =
 
 It has 9 channels and holds 260 samples per channel in a switched capacitor array that can run at up to . When a trigger comes, it converts all samples to digital values with 2340 parallel Wilkinson analog to digital converters ().
